--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>so chubby</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam earum pariatur unde inventore itaque sed sapiente voluptatibus, eligendi expedita possimus.</p>
     <img src="sakib.png" alt="sakib">
+    <img src="mashrafe.jpg" alt="mashrafe">
 </body>
 </html>
